--- a/app/src/main/res/layout/activity_recycleview.xml
+++ b/app/src/main/res/layout/activity_recycleview.xml
@@ -1,30 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.activity.MainActivity">
+    tools:context=".ui.activity.RecyclerviewActivity">
     <include
         layout="@layout/common_header"
         />
-    <RelativeLayout
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#ffffff"
+        android:orientation="vertical"
         >
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:id="@+id/iv_bg"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            fresco:actualImageScaleType="fitXY"
-            />
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycleview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/transparent"
             />
-    </RelativeLayout>
-
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
